--- a/test/fixtures/matchups.yml
+++ b/test/fixtures/matchups.yml
@@ -20,3 +20,13 @@ matchup3:
   away_detail: (3-4)
   home_picture: placeholder.jpg
   away_picture: placeholder.jpg
+
+matchup4:
+  home_team: Dinkers
+  away_team: Goobers
+  home_line: 15
+  away_line: -15
+  home_detail: (3-2)
+  away_detail: (1-3)
+  home_picture: placeholder.jpg
+  away_picture: placeholder.jpg
